@@ -1,4 +1,6 @@
 = 4.5.5 - 07.03.2022 =
+* Fixed: Uninstall now completelly removes everything based on selection
+* Added: New option to display featured downloads for the [downloads] shortcode
 
 = 4.5.4 - 28.02.2022 =
 Added: Included DLM Download Duplicator as core Download Monitor function ( https://github.com/WPChill/download-monitor/issues/848 )
